--- a/app/partials/index.html
+++ b/app/partials/index.html
@@ -16,11 +16,11 @@
 				<th>grp
 				<th>操作
 		<tbody>
-			<tr ng-repeat="item in items | filter:filterName" ng-class="{selected:selected}" ng-click="selected = !selected" ng-if="items.length > 0">
+			<tr ng-repeat="item in items | filter:filterName" ng-class="{selected:selected, pending: pending}" ng-click="selected = !selected" ng-if="items.length > 0">
 				<td>{{item.id}}
 				<td><span ng-hide="isEditing">{{item.name}}</span><input type="text" class="txt" ng-model="item.name" ng- ng-show="isEditing">
 				<td>{{item.grp}}
-				<td><a href="javascript:;" ng-click="delItem(item)">删除</a><a href="javascript:;" ng-click="isEditing=!isEditing">{{isEditing ? '完成' : '编辑'}}</a>
+				<td><a href="javascript:;" ng-click="delItem(item, $scope)">删除</a><a href="javascript:;" ng-click="isEditing=!isEditing">{{isEditing ? '完成' : '编辑'}}</a>{{pending ? 'pending...' : ''}}
 			<tr ng-if="items.length < 1">
 				<td colspan="4">无结果
 	</table>
