--- a/app/css/g.css
+++ b/app/css/g.css
@@ -15,6 +15,8 @@ a:hover {text-decoration:underline;}
 .btn_pending, .btn_disable {color: #fff!important; background: #CBCBCB!important; cursor: default; text-shadow: none!important; } .btn_pending {color: transparent!important;}
 .btn_pending:after {content: ''; left: 0; top: 0; position: absolute; display: block; width: 100%; height: 100%; background: url(//s2.ksyun.com/i/2/134.gif) no-repeat center; }
 .btn:active {background: #455469; }
+.btn-primary {color: #fff; background-color: #428bca; border-color: #357ebd; }
+.btn-warning {color: #fff; background-color: #f0ad4e; border-color: #eea236; }
 
 .pre {border-top:1px solid #999;}
 .preItem {margin:10px;}
@@ -41,3 +43,102 @@ td a {margin-left:5px;}
 .opArea {margin-bottom:10px;}
 .opArea .txt {vertical-align:middle;}
 .opArea .btn {margin-left:15px;}
+
+.iItem {margin:20px;}
+
+/* 模态窗 相关 */
+/* bootstrap 中的样式 */
+.modal-backdrop {
+position: fixed;
+top: 0;
+right: 0;
+bottom: 0;
+left: 0;
+z-index: 1030;
+background-color: #000;
+}
+.fade {
+opacity: 0;
+-webkit-transition: opacity .15s linear;
+transition: opacity .15s linear;
+}
+.fade.in {
+opacity: 1;
+}
+.modal-backdrop.fade {
+opacity: 0;
+filter: alpha(opacity=0);
+}
+.modal-backdrop.in {
+opacity: .5;
+filter: alpha(opacity=50);
+}
+.modal {
+position: fixed;
+top: 0;
+right: 0;
+bottom: 0;
+left: 0;
+z-index: 1040;
+display: none;
+overflow: auto;
+overflow-y: scroll;
+}
+.modal-dialog {
+position: relative;
+z-index: 1050;
+width: auto;
+margin: 10px;
+}
+.modal-dialog {
+width: 600px;
+margin: 30px auto;
+}
+.modal.fade .modal-dialog {
+-webkit-transform: translate(0,-25%);
+-ms-transform: translate(0,-25%);
+transform: translate(0,-25%);
+-webkit-transition: -webkit-transform .3s ease-out;
+-moz-transition: -moz-transform .3s ease-out;
+-o-transition: -o-transform .3s ease-out;
+transition: transform .3s ease-out;
+}
+.modal.in .modal-dialog {
+-webkit-transform: translate(0,0);
+-ms-transform: translate(0,0);
+transform: translate(0,0);
+}
+.modal-content {
+position: relative;
+background-color: #fff;
+border: 1px solid #999;
+border: 1px solid rgba(0,0,0,0.2);
+border-radius: 6px;
+outline: 0;
+-webkit-box-shadow: 0 3px 9px rgba(0,0,0,0.5);
+box-shadow: 0 3px 9px rgba(0,0,0,0.5);
+background-clip: padding-box;
+}
+.modal-content {
+-webkit-box-shadow: 0 5px 15px rgba(0,0,0,0.5);
+box-shadow: 0 5px 15px rgba(0,0,0,0.5);
+}
+.modal-header {
+min-height: 16.428571429px;
+padding: 15px;
+border-bottom: 1px solid #e5e5e5;
+}
+.modal-body {
+position: relative;
+padding: 20px;
+}
+.modal-footer {
+padding: 19px 20px 20px;
+margin-top: 15px;
+text-align: right;
+border-top: 1px solid #e5e5e5;
+}
+.modal-footer .btn+.btn {
+margin-bottom: 0;
+margin-left: 5px;
+}
