--- a/app/partials/edit.html
+++ b/app/partials/edit.html
@@ -3,10 +3,10 @@
 </div>
 <div class="modal-body">
 	<div class="iItem">
-		<input type="text" class="txt" ng-model="data.name" placeholder="name">
+		<input type="text" class="txt" ng-model="data.name" ng-disabled="pending" placeholder="name">
 	</div>
 	<div class="iItem">
-		<input type="text" class="txt" ng-model="data.grp" placeholder="grp">
+		<input type="text" class="txt" ng-model="data.grp" ng-disabled="pending" placeholder="grp">
 	</div>
 </div>
 <div class="modal-footer">
